feat: generics, initial

--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -1,10 +1,8 @@
 <?xml version="1.0"?>
-<psalm xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-       xmlns="https://getpsalm.org/schema/config"
-       xsi:schemaLocation="https://getpsalm.org/schema/config vendor/vimeo/psalm/config.xsd"
+<psalm xmlns="https://getpsalm.org/schema/config"
        cacheDirectory="var/psalm"
        totallyTyped="true">
-    
+
     <projectFiles>
         <directory name="src/"/>
         <ignoreFiles allowMissingFiles="true">
@@ -20,39 +18,39 @@
     <issueHandlers>
         <InvalidCatch>
             <errorLevel type="info">
-                <file name="src/Xezilaires/Metadata/Mapping.php" />
+                <file name="src/Xezilaires/Metadata/Mapping.php"/>
             </errorLevel>
         </InvalidCatch>
         <InternalMethod>
             <errorLevel type="info">
-                <directory name="src/Xezilaires/Test/" />
-                <directory name="src/Bridge/*/Test/" />
+                <directory name="src/Xezilaires/Test/"/>
+                <directory name="src/Bridge/*/Test/"/>
             </errorLevel>
         </InternalMethod>
         <MissingConstructor>
             <errorLevel type="info">
-                <directory name="src/Xezilaires/Annotation/" />
-                <directory name="src/Xezilaires/Test/Model/" />
+                <directory name="src/Xezilaires/Annotation/"/>
+                <directory name="src/Xezilaires/Test/Model/"/>
             </errorLevel>
         </MissingConstructor>
         <RedundantCondition>
             <errorLevel type="info">
-                <file name="src/Xezilaires/Metadata/Annotation/AnnotationDriver.php" />
+                <file name="src/Xezilaires/Metadata/Annotation/AnnotationDriver.php"/>
             </errorLevel>
         </RedundantCondition>
         <PropertyNotSetInConstructor>
             <errorLevel type="info">
-                <directory name="src/Xezilaires/Test/" />
-                <directory name="src/Bridge/*/Test/" />
+                <directory name="src/Xezilaires/Test/"/>
+                <directory name="src/Bridge/*/Test/"/>
             </errorLevel>
         </PropertyNotSetInConstructor>
 
         <!-- false positives -->
         <MixedMethodCall>
             <errorLevel type="info">
-                <file name="src/Bridge/PhpSpreadsheet/Test/RowIteratorTest.php" />
-                <file name="src/Bridge/Spout/Test/RowIteratorTest.php" />
-                <file name="src/Xezilaires/Test/SpreadsheetIteratorTest.php" />
+                <file name="src/Bridge/PhpSpreadsheet/Test/RowIteratorTest.php"/>
+                <file name="src/Bridge/Spout/Test/RowIteratorTest.php"/>
+                <file name="src/Xezilaires/Test/SpreadsheetIteratorTest.php"/>
             </errorLevel>
         </MixedMethodCall>
     </issueHandlers>
